--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,4 +1,23 @@
+.product{
+    width: 300px;
+    height: 510px;
+    border: 1px solid #95A0A7;
+    border-radius: 8px;
+}
 .product img{
     height: 286px;
     width: 286px;
+    border-radius: 8px;
+    margin: 7px;
+}
+.product-info{
+    margin: 14px;
+}
+.product-name{
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 25px;
+    margin-top: 7px;
 }
