--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -3,6 +3,7 @@
     height: 510px;
     border: 1px solid #95A0A7;
     border-radius: 8px;
+    position: relative;
 }
 .product img{
     height: 286px;
@@ -11,7 +12,10 @@
     margin: 7px;
 }
 .product-info{
-    margin: 14px;
+    margin: 0 14px;
+}
+.product-info p{
+    margin-bottom: 0;
 }
 .product-name{
     font-family: 'Lato';
@@ -20,4 +24,15 @@
     font-size: 21px;
     line-height: 25px;
     margin-top: 7px;
+}
+.btn-cart{
+    width: 100%;
+    background-color: #FFE0B3;
+    border-radius: 0px 0px 8px 8px;
+    border: none;
+    position: absolute;
+    bottom: 0;
+}
+.btn-cart:hover{
+    background-color:aqua;
 }
